[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_scene.gd" type="Script" id=1]
[ext_resource path="res://graphics/icons/buttons/settings.png" type="Texture" id=2]
[ext_resource path="res://graphics/icons/buttons/home.png" type="Texture" id=3]

[node name="MainPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PagesContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 717.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="PanelContainer" parent="VBoxContainer"]
margin_top = 721.0
margin_right = 480.0
margin_bottom = 853.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Menu"]
margin_left = 2.0
margin_top = 2.0
margin_right = 478.0
margin_bottom = 130.0

[node name="btn_GotoHome" type="Button" parent="VBoxContainer/Menu/HBoxContainer"]
margin_right = 236.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
toggle_mode = true

[node name="Texture" type="TextureRect" parent="VBoxContainer/Menu/HBoxContainer/btn_GotoHome"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -19.0
margin_right = 45.0
margin_bottom = 19.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_GotoSettings" type="Button" parent="VBoxContainer/Menu/HBoxContainer"]
margin_left = 240.0
margin_right = 476.0
margin_bottom = 128.0
size_flags_horizontal = 3
toggle_mode = true

[node name="Texture" type="TextureRect" parent="VBoxContainer/Menu/HBoxContainer/btn_GotoSettings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -19.0
margin_right = 45.0
margin_bottom = 19.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Menu/HBoxContainer/btn_GotoHome" to="." method="_on_btn_GotoHome_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/HBoxContainer/btn_GotoSettings" to="." method="_on_btn_GotoSettings_pressed"]
